Make the GUI responsive for mobile screen sizes ; run.js path wrap fix

--- a/GUI/src/app/@theme/layouts/GUI/gui.layout.scss
+++ b/GUI/src/app/@theme/layouts/GUI/gui.layout.scss
@@ -18,6 +18,7 @@
     min-width: 900px; //min 900x780 space for content, everything else adds scrollbars to the "browser"
     min-height: 780px;
     overflow: scroll;
+    background: #000;
   }
 
   nb-layout-column {
