--- a/GUI/src/app/components/guiListbox/guiListbox.scss
+++ b/GUI/src/app/components/guiListbox/guiListbox.scss
@@ -136,7 +136,12 @@ div.record-picker::-webkit-scrollbar-thumb {
     margin-right: 3px;
 }
 .buttonBox .switchButton {
-    width: 40%;
+  width: 40%;
+
+  @media (max-width: 420px) {
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
 }
 
 button.btn-block {
